Closed
Bug 426980
Opened 17 years ago
Closed 17 years ago
When zooming html or mathml text embed in svg as foreignObject, scaling factor seems to be larger, then for normal html, mathml of svg text
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
People
(Reporter: olunet, Assigned: longsonr)
Details
(Keywords: fonts, testcase)
Attachments
(3 files, 2 obsolete files)
1.19 KB,
application/xml
|
Details | |
2.24 KB,
patch
|
roc
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
10.24 KB,
application/xml
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5) Gecko/2008032620 Firefox/3.0b5
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5) Gecko/2008032620 Firefox/3.0b5
Font size of any text in svg embed as foreignObject, when zoomed is scaled by larger factor, then normal text. Try to zoom
<p>Test</p>
<svg>
<switch>
<foreignObject>
<p>Test</p>
</foreignObject>
</switch>
</svg>
Reproducible: Always
Steps to Reproduce:
1.open a document with text in html and text embed in svg
2.zoon io or out
3.see the result
Actual Results:
font-size in svg is larger
Expected Results:
font-size should be magnified in the same way for any text
Comment 2•17 years ago
|
||
I can reproduce the bug using a Mac trunk build.
Updated•17 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 3•17 years ago
|
||
We're scaling twice. The foreign object scales its content via GetCanvasTM which scales as the outer svg TM changes. But for foreignObject the content scales itself too.
Not sure how to fix it. I tried simply premultiplying by the inverse scaling in nsSVGForeignObject::PaintSVG. This makes the text zoom OK but it eventually exceeds the foreign object bounding box and gets clipped.
Should the mRect for the covered region of a foreignObject change when you zoom?
Assignee | ||
Comment 4•17 years ago
|
||
Updated•17 years ago
|
Flags: wanted1.9+
Assignee | ||
Comment 6•17 years ago
|
||
Assignee: nobody → longsonr
Attachment #313565 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #313947 -
Flags: review?(jwatt)
Assignee | ||
Updated•17 years ago
|
Attachment #313947 -
Attachment is obsolete: true
Attachment #313947 -
Flags: review?(jwatt)
Assignee | ||
Comment 7•17 years ago
|
||
Comment on attachment 313947 [details] [diff] [review]
patch
My mistake, nothing wrong with this one as far as I can tell.
Attachment #313947 -
Attachment is obsolete: false
Attachment #313947 -
Flags: review?(jwatt)
Comment 8•17 years ago
|
||
Comment on attachment 313947 [details] [diff] [review]
patch
Can you change the comment to something like:
// GetCanvasTM includes a device pixel to CSS pixel scaling. Since non-SVG
// content takes care of this itself, we need to remove this pre-scaling from
// the matrix returned by GetTMIncludingOffset before painting our children.
Attachment #313947 -
Flags: review?(jwatt) → review+
Assignee | ||
Comment 9•17 years ago
|
||
Attachment #313947 -
Attachment is obsolete: true
Attachment #314059 -
Flags: superreview?(roc)
Attachment #314059 -
Flags: superreview?(roc) → superreview+
Assignee | ||
Updated•17 years ago
|
Attachment #314059 -
Flags: approval1.9?
Assignee | ||
Comment 10•17 years ago
|
||
Zooming and foreignObjects been new cool fx 3 features really need to work together properly.
Flags: blocking1.9?
Comment 11•17 years ago
|
||
Comment on attachment 314059 [details] [diff] [review]
review comment addressed
a1.9=beltzner
Attachment #314059 -
Flags: approval1.9? → approval1.9+
Updated•17 years ago
|
Flags: blocking1.9?
Assignee | ||
Comment 12•17 years ago
|
||
checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 13•17 years ago
|
||
Attachment #314912 -
Flags: approval1.9?
Reporter | ||
Comment 14•17 years ago
|
||
IMozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008040907 Minefield/3.0pre
In 3.0pre x-position remains the same, but should be shifted.
Assignee | ||
Updated•17 years ago
|
Attachment #314912 -
Flags: approval1.9?
Assignee | ||
Comment 15•17 years ago
|
||
(In reply to comment #14)
> IMozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008040907
> Minefield/3.0pre
>
> In 3.0pre x-position remains the same, but should be shifted.
>
Please raise any additional issue(s) in new bugs.
You need to log in
before you can comment on or make changes to this bug.
Description
•