Bug 426980 - foreignObject content displays at wrong size if zoomed. r=jwatt,sr=roc,a1.9=beltzner