layout/svg/base/src/nsSVGForeignObjectFrame.cpp
@@ -246,7 +246,22 @@ nsSVGForeignObjectFrame::PaintSVG(nsSVGRenderState *aContext,
   if (!kid)
     return NS_OK;
 
-  nsCOMPtr<nsIDOMSVGMatrix> tm = GetTMIncludingOffset();
+  // GetCanvasTM includes a device pixel to CSS pixel scaling. Since non-SVG
+  // content takes care of this itself, we need to remove this pre-scaling from
+  // the matrix returned by GetTMIncludingOffset before painting our children.
+  float cssPxPerDevPx =
+    PresContext()->AppUnitsToFloatCSSPixels(
+                                PresContext()->AppUnitsPerDevPixel());
+  nsCOMPtr<nsIDOMSVGMatrix> cssPxToDevPxMatrix;
+  NS_NewSVGMatrix(getter_AddRefs(cssPxToDevPxMatrix),
+                  cssPxPerDevPx, 0.0f,
+                  0.0f, cssPxPerDevPx);
+
+  nsCOMPtr<nsIDOMSVGMatrix> localTM = GetTMIncludingOffset();
+
+  // PRE-multiply px conversion!
+  nsCOMPtr<nsIDOMSVGMatrix> tm;
+  cssPxToDevPxMatrix->Multiply(localTM, getter_AddRefs(tm));
 
   gfxMatrix matrix = nsSVGUtils::ConvertSVGMatrixToThebes(tm);
 
@@ -267,7 +282,7 @@ nsSVGForeignObjectFrame::PaintSVG(nsSVGRenderState *aContext,
       GetAnimatedLengthValues(&x, &y, &width, &height, nsnull);
 
     // tm already includes the x,y offset
-    nsSVGUtils::SetClipRect(gfx, tm, 0.0f, 0.0f, width, height);
+    nsSVGUtils::SetClipRect(gfx, localTM, 0.0f, 0.0f, width, height);
   }
 
   gfx->Multiply(matrix);
